2013-07-09 Miguel de Dios <miguel.dedios@artica.es>

	* lib/PandoraFMS/PredictionServer.pm, util/pandora_xml_stress.pl:
	improved the source code style.

2013-07-05  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added macros _snmp_oid_ and _snmp_value_ to
	  SNMP alerts. Changed the behaviour of _snmp_fx_ to act as filters
	  and not as user defined macros.

2013-07-05  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/PluginServer.pm: Fixed subst_alert_macros assignation
	to variable.

2013-07-05  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Exported subst_alert_macros. Added support
	  for an arbitrarily large number of _snmp_fx_ macros.

2013-07-05  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/PluginServer.pm: Added agent and module macros to
	  plugins.

2013-07-03  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Assign default values to the _snmp_fx_ macros
	  from variable bindings.

2013-07-01  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Resolve numeric ids to strings before writing
	  events to an external log file.

2013-07-01  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/Core.pm,
	  conf/pandora_server.conf.new: Added support for writing events to an
	  external log file.

2013-06-26  Sancho Lerena <slerena@artica.es>

        * util/plugin/pandora_loadgen.pl,
        util/plugin/ssh_pandoraplugin.sh: Fixed small problems with
        plugins provided as sample.

2013-06-26  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.redhat.spec,
	  pandora_server.spec: Fixed directory permissions.

2013-06-24  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Merged from 4.0 branch. Fixed a call
	  to get_agent_from_addr that prevented parents from being properly
	  detected.

2013-06-19 Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/Config.pm,
	lib/PandoraFMS/Core.pm,
	conf/pandora_server.conf.new,