@@ -1,3 +1,8 @@
+2013-07-10  Ramon Novoa  <rnovoa@artica.es>
+
+	* util/pandora_db.pl: Ignore reports if the metaconsole is enabled, since
+	  agents are never local.
+
 2013-07-09 Miguel de Dios <miguel.dedios@artica.es>
 
 	* lib/PandoraFMS/PredictionServer.pm, util/pandora_xml_stress.pl:
